--- a/DroseroMVC/Web.config
+++ b/DroseroMVC/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -6,14 +6,19 @@
 <configuration>
  
   <connectionStrings>
-    <add name="connectionString" connectionString="Data Source=indbanl175\droserodatabase;Initial Catalog=droseroDB;Persist Security Info=True;User ID=sa;Password=paSSw0rd"
-      />
+    <add name="connectionString" connectionString="Data Source=indbanl175\droserodatabase;Initial Catalog=droseroDB;Persist Security Info=True;User ID=sa;Password=paSSw0rd" providerName="System.Data.SqlClient" />
+    <!--<add name="azureDBConnectionString" connectionString="Server=tcp:droserodatabase.database.windows.net,1433;Initial Catalog=DroseroDB;Persist Security Info=False;User ID=droseroUser;Password=paSSw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="TwilioSID" value="AC055d4a93b43fc95436f6cf4657c090ed"/>
+    <add key="TwilioAuthToken" value="c8d8a4f0e29a9068ad09aba73fb05823"/>
+
+    <add key="managerMobile" value="+919717670527"/>
+    <add key="accountNumber" value="+16093164237"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -51,7 +56,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -75,7 +80,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Unity.Abstractions" publicKeyToken="6d32ff45e0ccc69f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.3.1.0" newVersion="2.3.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
