--- a/Drosero.Domain/Drosero.Domain.csproj
+++ b/Drosero.Domain/Drosero.Domain.csproj
@@ -53,18 +53,23 @@
     <Compile Include="Interfaces\IFoodItemService.cs" />
     <Compile Include="Interfaces\IOrderRepository.cs" />
     <Compile Include="Interfaces\IOrderService.cs" />
+    <Compile Include="Interfaces\IReservationService.cs" />
+    <Compile Include="Interfaces\IReservationRepository.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\FoodItem.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\FoodItemRepository.cs" />
+    <Compile Include="Repositories\ReservationRepository.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\FoodItemService.cs" />
+    <Compile Include="Services\ReservationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
