--- a/DroseroMVC/Web.Release.config
+++ b/DroseroMVC/Web.Release.config
@@ -3,17 +3,10 @@
 <!-- For more information on using Web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
-    finds an attribute "name" that has a value of "MyDB".
-
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+  <connectionStrings>
+    <add name="connectionString" connectionString="Data Source=indbanl175\.MSSQLSERVER2014;Initial Catalog=droseroDB;Persist Security Info=True;User ID=sa;Password=paSSw0rd" providerName="System.Data.SqlClient" />
+    <!--<add name="azureDBConnectionString" connectionString="Server=tcp:droserodatabase.database.windows.net,1433;Initial Catalog=DroseroDB;Persist Security Info=False;User ID=droseroUser;Password=paSSw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>-->
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
