--- a/DroseroMVC/packages.config
+++ b/DroseroMVC/packages.config
@@ -6,7 +6,7 @@
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="knockoutjs" version="3.4.2" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net461" />
@@ -20,9 +20,9 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net461" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net461" requireReinstallation="true" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
@@ -39,8 +39,8 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net461" />
-  <package id="Twilio" version="5.9.2" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net461" requireReinstallation="true" />
+  <package id="Twilio" version="5.9.2" targetFramework="net461" requireReinstallation="true" />
   <package id="Unity" version="5.3.1" targetFramework="net461" />
   <package id="Unity.Abstractions" version="2.3.1" targetFramework="net461" />
   <package id="Unity.Container" version="5.3.2" targetFramework="net461" />
