--- a/DroseroMVC/DroseroMVC.csproj
+++ b/DroseroMVC/DroseroMVC.csproj
@@ -279,6 +279,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
     <None Include="Properties\PublishProfiles\drosero - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\droserocafe.com - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\DroseroMVC20171212060938 - Web Deploy.pubxml" />
