--- a/Drosero.Domain/Drosero.Domain.csproj
+++ b/Drosero.Domain/Drosero.Domain.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Interfaces\IReservationService.cs" />
     <Compile Include="Interfaces\IReservationRepository.cs" />
+    <Compile Include="Interfaces\ITriviaRepository.cs" />
+    <Compile Include="Interfaces\ITriviaService.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Models\Address.cs" />
@@ -63,14 +65,17 @@
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\FoodItem.cs" />
     <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\Trivia.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\FoodItemRepository.cs" />
     <Compile Include="Repositories\ReservationRepository.cs" />
+    <Compile Include="Repositories\TriviaRepository.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\FoodItemService.cs" />
     <Compile Include="Services\ReservationService.cs" />
+    <Compile Include="Services\TriviaService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
