--- a/DroseroMVC/DroseroMVC.csproj
+++ b/DroseroMVC/DroseroMVC.csproj
@@ -268,14 +268,27 @@
     <Content Include="Content\images\imgCategoryMainCourse2.jpg" />
     <Content Include="Content\images\imgCategoryMainCourse3.jpg" />
     <Content Include="Content\images\imgCategoryMainCourse4.jpg" />
-    <Content Include="Content\images\imgLounge1.jpg" />
-    <Content Include="Content\images\imgLounge2.jpg" />
-    <Content Include="Content\images\imgLounge3.jpg" />
-    <Content Include="Content\images\imgLounge4.jpg" />
+    <Content Include="Content\images\imgLounge1.png" />
+    <Content Include="Content\images\imgLounge2.png" />
+    <Content Include="Content\images\imgLounge3.png" />
+    <Content Include="Content\images\imgLounge4.png" />
+    <Content Include="Content\images\imgLounge5.png" />
     <Content Include="Content\images\trivias\1014.png" />
     <Content Include="Content\images\trivias\1023.png" />
     <Content Include="Content\images\trivias\1027.png" />
+    <Content Include="Content\images\trivias\1054.png" />
+    <Content Include="Content\images\trivias\1058.png" />
+    <Content Include="Content\images\trivias\1061.png" />
+    <Content Include="Content\images\trivias\1078.png" />
+    <Content Include="Content\images\trivias\1093.png" />
+    <Content Include="Content\images\trivias\1102.png" />
+    <Content Include="Content\images\trivias\1116.png" />
     <Content Include="Content\images\trivias\1123.png" />
+    <Content Include="Content\images\trivias\1139.png" />
+    <Content Include="Content\images\trivias\1160.png" />
+    <Content Include="Content\images\trivias\1194.png" />
+    <Content Include="Content\images\trivias\1196.png" />
+    <Content Include="Content\images\trivias\1206.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
