--- a/DroseroMVC/Web.Release.config
+++ b/DroseroMVC/Web.Release.config
@@ -4,7 +4,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
-    <add name="connectionString" connectionString="Data Source=indbanl175\.MSSQLSERVER2014;Initial Catalog=droseroDB;Persist Security Info=True;User ID=sa;Password=paSSw0rd" providerName="System.Data.SqlClient" />
+    <add name="connectionString" connectionString="Data Source=136.243.67.94\MSSQLSERVER2014;Initial Catalog=droseroDB;Persist Security Info=False;User ID=droseroUser;Password=admin987" providerName="System.Data.SqlClient" />
     <!--<add name="azureDBConnectionString" connectionString="Server=tcp:droserodatabase.database.windows.net,1433;Initial Catalog=DroseroDB;Persist Security Info=False;User ID=droseroUser;Password=paSSw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>-->
   </connectionStrings>
   <system.web>
