--- a/DroseroMVC/DroseroMVC.csproj
+++ b/DroseroMVC/DroseroMVC.csproj
@@ -273,6 +273,8 @@
     <Content Include="Content\images\imgLounge3.png" />
     <Content Include="Content\images\imgLounge4.png" />
     <Content Include="Content\images\imgLounge5.png" />
+    <Content Include="Content\images\imgLounge6.png" />
+    <Content Include="Content\images\imgLounge7.png" />
     <Content Include="Content\images\trivias\1014.png" />
     <Content Include="Content\images\trivias\1023.png" />
     <Content Include="Content\images\trivias\1027.png" />
