--- a/Drosero.Domain/Drosero.Domain.csproj
+++ b/Drosero.Domain/Drosero.Domain.csproj
@@ -45,6 +45,8 @@
     <Compile Include="DBHelper\DataProvider.cs" />
     <Compile Include="Interfaces\IAddressRepository.cs" />
     <Compile Include="Interfaces\IAddressService.cs" />
+    <Compile Include="Interfaces\IApplicationRepository.cs" />
+    <Compile Include="Interfaces\IApplicationService.cs" />
     <Compile Include="Interfaces\IBaseRepository.cs" />
     <Compile Include="Interfaces\IBaseService.cs" />
     <Compile Include="Interfaces\ICategoryRepository.cs" />
@@ -68,10 +70,12 @@
     <Compile Include="Models\Trivia.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ApplicationRepository.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\FoodItemRepository.cs" />
     <Compile Include="Repositories\ReservationRepository.cs" />
     <Compile Include="Repositories\TriviaRepository.cs" />
+    <Compile Include="Services\ApplicationService.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\FoodItemService.cs" />
     <Compile Include="Services\ReservationService.cs" />
